--- a/v0.11.0/index.html
+++ b/v0.11.0/index.html
@@ -64,6 +64,15 @@
 					<h1>Node.js bindings for DAML</h1>
 				</a>
 				<p>The <a href="https://node.js.org/">Node.js</a> bindings for <a href="https://daml.com/">DAML</a> allow you to write applications on the Node.js platform that interact with a DAML application through the <a href="https://docs.daml.com/app-dev/ledger-api-introduction/index.html">Ledger API</a>.</p>
+				<a href="#status" id="status" style="color: inherit; text-decoration: none;">
+					<h2>Status</h2>
+				</a>
+				<p><strong>The Node.js bindings are deprecated as of 2020-10-14.</strong></p>
+				<p>Either switch to the <a href="https://docs.daml.com/app-dev/bindings-ts/index.html">JavaScript client
+					libraries</a>
+					running over the HTTP JSON API or to the <a href="https://docs.daml.com/app-dev/bindings-java/index.html">Java
+					bindings</a>
+				which are based on the gRPC ledger API.</p>
 				<a href="#table-of-contents" id="table-of-contents" style="color: inherit; text-decoration: none;">
 					<h2>Table of contents</h2>
 				</a>
